--- a/assignments/a4/a4_834.tex
+++ b/assignments/a4/a4_834.tex
@@ -603,11 +603,7 @@ at 5 and 10, and precision at 10 for the entire CACM query set
 \end{spverbatim}
 
 \subsection*{Answer}
-The formulas to calculate the metrics required in this question are similar to the formulas that have been used in the previous questions. NDCG is calculated using the following formula:
-\begin{align}
-NDCG_{p}=\frac{DCG_{p}}{IDCG_{p}}
-\end{align}
-The code to solve this problem can be found on listing \ref{lst:85}. Figure \ref{fig:85_metrics} shows the value of mean average precision (MAP), average NDCG at 5 and 10, and precision at 10 for the entire CACM query set. The recall-precision graph is shown in figure \ref{fig:85_recall-precision}.
+The formulas to calculate the metrics required in this question are similar to the formulas that have been used in the previous questions. The code to solve this problem can be found on listing \ref{lst:85}. Figure \ref{fig:85_metrics} shows the value of mean average precision (MAP), average NDCG at 5 and 10, and precision at 10 for the entire CACM query set. The recall-precision graph is shown in figure \ref{fig:85_recall-precision}.
 
 \begin{figure}[H]
 	\fbox{\includegraphics[scale=0.6]{85_metrics}}
