--- a/assignments/a5/a5_834.tex
+++ b/assignments/a5/a5_834.tex
@@ -275,13 +275,46 @@ print 'Pagerank values = {}'.format(pr)
 
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 
-\section*{Question 0.3}
+\section*{Question 10.5}
 \begin{spverbatim}
-
+Find a community-based question answering site on the Web and ask two questions, one that is low-quality and one that is high-quality. Describe the answer quality of each question.
 \end{spverbatim}
 
 \subsection*{Answer:}
-answer 2
+For this assignment, I asked 2 questions on 2 different comunity-based question answering site. For the low-quality question, I asked about \textbf{\textit{`What is the purpose of our life?'}} \footnote{https://answers.yahoo.com/question/index?qid=20161216122515AAPvTIw&page=4} on Yahoo Answers \url{https://answers.yahoo.com/} as can be seen on figure \ref{fig:10_5_q}. For the high-quality question, I asked the question \textbf{\textit{`BUILD-MAX-HEAP running time for array sorted in decreasing order'}} on Stackoverflow \footnote{http://stackoverflow.com/questions/39691923/build-max-heap-running-time-for-array-sorted-in-decreasing-order} as can be seen on figure \ref{fig:10_5_a1}.
+
+\begin{figure}[H]
+	\fbox{\includegraphics[scale=0.5]{10_5_q}}
+	\centering
+	\caption{Low Quality Question I asked on Yahoo Answers}
+	\label{fig:10_5_q}
+\end{figure}
+
+\begin{figure}[H]
+	\fbox{\includegraphics[scale=0.6]{10_5_hi_quality}}
+	\centering
+	\caption{High Quality Question I asked on Stackoverflow}
+	\label{fig:10_5_hi_quality}
+\end{figure}
+
+By the time I write this report, I got 37 answers for the low-quality question on Yahoo Answers. Some of the answers can be seen on figure \ref{fig:10_5_a1}. For the high-quality question on Stackoverflow, I only got 2 answers as can be seen on figure \ref{fig:10_5_high_quality_answer}. \newline 
+However, for the low-quality question, I also got low-quality answers. This is understandable because for a low-quality question, people tend to post anything that they have in their minds without being afraid of any risks. For example, when I asked `What is the purpose of our life', I got answers like `Who says that there's one?', `To study the paintings of the great Masters, and understand that UFOs are real', and `Drink beer and have a good time'. \newline
+Accordingly, despite the low number of answers, I got high-quality answers for the high-quality question. This is understandable because for this type of question, people will think twice (or maybe more) before submitting the answers. They should be able to provide not only answer, but also the explanation why the answer is correct. People will not take the risk of embarassing themselves by saying something irrelevant. For a high-quality answer, not everyone has the ability to provide a justifiable answer and explanation. Hence, we got a lower number of answers for the high-quality question compare to the low-quality question. 
+
+\begin{figure}[H]
+	\fbox{\includegraphics[scale=0.6]{10_5_a1}}
+	\centering
+	\caption{Answers for the low-quality question I asked on Yahoo Answers}
+	\label{fig:10_5_a1}
+\end{figure}
+
+\begin{figure}[H]
+	\fbox{\includegraphics[scale=0.6]{10_5_high_quality_answer}}
+	\centering
+	\caption{Answers for the high-quality question I asked on Stackoverflow}
+	\label{fig:10_5_high_quality_answer}
+\end{figure}
+
 
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 
