--- a/assignments/a5/biblio.bib
+++ b/assignments/a5/biblio.bib
@@ -1,3 +1,12 @@
+@misc{galago-operators,
+	title={{The Lemur Project / Wiki / Galago Operators}},
+	author={David Fisher},
+	year={2016},
+	howpublished = 
+	{\url{https://sourceforge.net/p/lemur/wiki/Galago%20Operators/}},
+	note = "[Online; accessed 16-December-2016]"
+}
+
 @misc{networkx-hits-pagerank,
 	title={{Networkx - Link Analysis}},
 	author={NetworkX Developers},
