--- a/assignments/a5/biblio.bib
+++ b/assignments/a5/biblio.bib
@@ -1,3 +1,21 @@
+@misc{galago-default-smoothing,
+	title={{The Lemur Project / Discussion / Galago:About retrieval models}},
+	author={Galago Project},
+	year={2016},
+	howpublished = 
+	{\url{https://sourceforge.net/p/lemur/discussion/galago/thread/10ff53c2/}},
+	note = "[Online; accessed 16-December-2016]"
+}
+
+@misc{language-model,
+	title={{Language Model}},
+	author={Nazli Goharian},
+	year={2016},
+	howpublished = 
+	{\url{http://people.cs.georgetown.edu/~nazli/classes/ir-Slides/LanguageModel-13.pdf}},
+	note = "[Online; accessed 16-December-2016]"
+}
+
 @misc{galago-operators,
 	title={{The Lemur Project / Wiki / Galago Operators}},
 	author={David Fisher},
