--- a/assignments/a5/biblio.bib
+++ b/assignments/a5/biblio.bib
@@ -1,3 +1,13 @@
+@book{pci,
+	title={Programming Collective Intelligence},
+	author={Toby Segaran},
+	isbn={978-0-596-52932-1},
+	series={International series of monographs on physics},
+	year={2007},
+	publisher={O'Reilly Media},
+	keywords = {inteligence}
+}
+
 @misc{galago-default-smoothing,
 	title={{The Lemur Project / Discussion / Galago:About retrieval models}},
 	author={Galago Project},
