--- a/assignments/a5/a5_834.tex
+++ b/assignments/a5/a5_834.tex
@@ -555,6 +555,74 @@ print "Mean Squared Error of Pearson: %f" % mean_squared_error(y_true, y_pred_pe
 
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 
+\section*{Question 10.9}
+\begin{spverbatim}
+Both the clustering and nearest neighbor–based collaborative filtering algorithms described in this chapter make predictions based on user/user similarity. Formulate both algorithms in terms of item/item similarity. How can the distance between two items be measured?
+\end{spverbatim}
+
+\subsection*{Answer}
+For this assignment, I still use the movielens dataset from \url{http://grouplens.org/datasets/movielens/100k/}. I also utilize the python code `recommendation.py' provided in the book `Programming Collective Intelligence' \cite{pci}. The code can be seen on listing \ref{lst:10_9}. The algorithm to compute the item similarity is similar to that of user similarity. We only need to `flip' our point of view, from measuring the similarity between users to measuring similarity between items (see listing \ref{lst:10_9}, line 14). We still use the same distance metrics: Correlation similarity and Euclidean distance. 
+Figure \ref{fig:10_9_output} shows the snippet of the output for question 10.9. 
+
+\begin{figure}[H]
+	\fbox{\includegraphics[scale=0.5]{10_9_output}}
+	\centering
+	\caption{A snippet of the output for question 10.9}
+	\label{fig:10_9_output}
+\end{figure}
+
+\begin{lstlisting}[language=python, caption={Code for question 10.9}, label={lst:10_9}]
+
+#!/usr/bin/python
+
+import os
+import pickle
+import random
+
+import recommendations as r
+
+if __name__ == '__main__':
+_, _, prefs = pickle.load(open('movielens.pkl'))
+
+# To make item-based, transform prefs, so the format of prefs will be prefs[movie][user] = rating
+prefs = r.transform_prefs(prefs)
+
+# Split prefs into train and test prefs
+movies = prefs.keys()
+random.shuffle(movies)
+
+movies_train, movies_test = movies[:int(0.9 * len(movies))], movies[int(0.1 * len(movies)):]
+train = {m: prefs[m] for m in movies_train}
+test = {m: prefs[m] for m in movies_test}
+
+for movie in test:
+sim_distances = []
+sim_pearsons = []
+
+for other_movie in train:
+# Calculate distance using euclidean distance
+sim_distances.append((r.sim_distance(prefs, movie, other_movie), other_movie))
+# Calculate similarity using pearson
+sim_pearsons.append((r.sim_pearson(prefs, movie, other_movie), other_movie))
+
+# distance sort ascending
+sim_distances.sort()
+# similarity sort descending
+sim_pearsons.sort(reverse=True)
+
+# select 1st top of the list
+sim_most_related_movie = sim_distances[0][1]
+pear_most_related_movie = sim_pearsons[0][1]
+
+# Compare
+print 'Using euclidean distance : Actual movie = {}, Predicted movie = {}'.format(movie, sim_most_related_movie)
+print 'Using pearson similarity : Actual movie = {}, Predicted movie = {}'.format(movie, pear_most_related_movie)
+
+
+\end{lstlisting}
+
+\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+
 
 \medskip
 
